# test-task-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
TestTaskApi/: db.sqlite3  manage.py
TestTaskApi/TestTaskApi/: asgi.py  settings.py  urls.py  wsgi.py
TestTaskApi/app/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
TestTaskApi/app/migrations/: 0001_initial.py  0002_remove_member_team_membership.py
